--- a/ASSET/style.css
+++ b/ASSET/style.css
@@ -50,3 +50,43 @@ header {
     background-color: #f2f2f2;
     color: #000;
 }
+
+header article .baner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fff;
+    width: 25em;
+    height: 20em;
+    margin-top: 4em;
+    margin-left: 4em;
+    z-index: 10;
+
+    box-shadow: 10px 10px 1px  #000;
+    position: relative;
+}
+
+header article {
+    text-align: center;
+    width: 40vw;
+    margin-left: 2em;
+    margin-top: 1em;
+}
+
+header article p {
+    color: #fff;
+}
+
+.click {
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    background-color: #ffd700;
+    padding-block: 10px;
+    padding-inline: 20px;
+    border-radius: 15px;
+}
+.click:hover {
+    background-color: #ffe137;
+}
