--- a/ASSET/style.css
+++ b/ASSET/style.css
@@ -6,7 +6,7 @@
 }
 
 header {
-    background-image: url(./IMAGES/Background.webp);
+    background-image: url(./IMAGES/Background2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
