--- a/ASSET/style.css
+++ b/ASSET/style.css
@@ -1,26 +1,32 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 0%;
     box-sizing: 0;
     font-family: 'Oswald', sans-serif;
 }
 
+/* Contiene el background de bienvenida (el cafe ateti) */
 header {
     background-image: url(./IMAGES/Background2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100vh;
-}
+    min-height: 100vh;
+    display: flex;
 
-.nav {
-   display: flex;
-   align-items: center;
-   justify-content: space-between; 
-   padding-inline: 1.5em;
-   min-height: 80px;
-   font-size: 1.3rem;
 }
+/* Barra de navegación */
+    .nav {
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: space-between; 
+    padding-inline: 1.5em;
+    min-height: 80px;
+    
+    font-size: 1.3rem;
+    /* background-color: #f2f2f2; */
+    }
 .nav ul ,li,a {
     display: flex;
     gap: 1rem;
@@ -32,7 +38,7 @@ header {
     text-decoration: underline;
     transition: all 1s;
 }
-
+/* contenedor de resgistro de usuarios */
 .nav .r-container {
     display: flex;
     gap: 1rem;
@@ -41,16 +47,17 @@ header {
 .nav .r-container a {
     color: #f2f2f2;
     background-color: #000;
-    padding-inline: 0.5rem;
-    border-top-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
+    padding-inline: 16px;
+    padding-block: 0.2em;
+    border-radius: 15px;
     transition: all 1s;
+    text-decoration: none;
 }
 .nav .r-container a:hover {
     background-color: #f2f2f2;
     color: #000;
 }
-
+/* Diseño del banner de bienvenida */
 header article .baner {
     display: flex;
     justify-content: center;
@@ -59,12 +66,16 @@ header article .baner {
     background-color: #fff;
     width: 25em;
     height: 20em;
-    margin-top: 4em;
-    margin-left: 4em;
-    z-index: 10;
+    margin-top: 5em;
+    margin-left: 8em;
+    border-radius: 15px;
+    
 
     box-shadow: 10px 10px 1px  #000;
-    position: relative;
+    animation: desplazamiento alternate  infinite all;
+}
+header article .baner h3 {
+    margin: -30px 0px 0px 150px;
 }
 
 header article {
@@ -72,12 +83,20 @@ header article {
     width: 40vw;
     margin-left: 2em;
     margin-top: 1em;
+    animation: desplazamiento alternate  infinite;
 }
-
+@keyframes desplazamiento {
+    100% {
+        transform: translateY(20px);
+    }
+    0% {
+        transform: translateY(0px);
+    }
+}
 header article p {
     color: #fff;
 }
-
+/* Diseño boton del modal */
 .click {
     border: none;
     cursor: pointer;
@@ -89,4 +108,10 @@ header article p {
 }
 .click:hover {
     background-color: #ffe137;
+}
+
+dialog {
+    background-color: red;
+    color: #000;
+    
 }
